Updated Java sample to ensure consistent hashing